story 3 and 4 added

--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
 </head>
 
 <body>
-    <main> id="main"
+    <main id="main"> 
+        <div id="img-div">
+            <img id="image">
+        </div>
 
     </main>
 The content of the document......
 </body>
 
-</html>
+</html>````````````````
